# aemc_client

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: Aemc.h  visualization.h
include/aemc_client/: Pointset_matching.h  SeekerSDK.h
script/: 1-L-middle1-raw.csv  CircleFiitting.py  Mytest.py  Readme.md  Register.py  Registration.py  forcpd.py  icp.py  test.py
src/: Aemc.cpp  Pointset_matching.cpp  aemc_client_node.cpp  matching.cpp  sub.cpp  test.cpp  visualization.cpp
